--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -1,18 +1,18 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/relativeLayout2"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".login.LoginActivity"
-    android:background="#ee8972">
+    android:background="#ee8972"
+    tools:context=".login.LoginActivity">
 
     <TextView
-        android:id="@+id/tv_title"
+        android:id="@+id/log_title"
         android:layout_width="135dp"
         android:layout_height="wrap_content"
-        android:layout_above="@id/tv_subtitle"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentEnd="true"
+        android:layout_above="@id/log_subtitle"
         android:layout_marginStart="139dp"
         android:layout_marginEnd="136dp"
         android:layout_marginBottom="31dp"
@@ -20,146 +20,181 @@
         android:text="@string/app_name"
         android:textAlignment="center"
         android:textColor="@color/colorAccent"
-        android:textSize="100sp" />
+        android:textSize="100sp"
+        app:layout_constraintBottom_toTopOf="@id/log_subtitle"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent" />
 
     <TextView
-        android:id="@+id/tv_subtitle"
+        android:id="@+id/log_subtitle"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_above="@id/et_email"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentEnd="true"
+        android:layout_above="@id/log_email"
         android:layout_marginStart="99dp"
         android:layout_marginEnd="98dp"
-        android:layout_marginBottom="46dp"
+        android:layout_marginBottom="32dp"
         android:text="@string/tag"
         android:textAlignment="center"
         android:textColor="@color/colorAccent"
-        android:textSize="30sp" />
+        android:textSize="30sp"
+        app:layout_constraintBottom_toTopOf="@id/log_email"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.495"
+        app:layout_constraintStart_toStartOf="parent" />
 
     <EditText
-        android:id="@+id/et_email"
+        android:id="@+id/log_email"
         android:layout_width="match_parent"
         android:layout_height="50dp"
+        android:layout_above="@id/log_password"
+        android:layout_marginLeft="40dp"
+        android:layout_marginRight="40dp"
+        android:layout_marginBottom="10dp"
+        android:backgroundTint="@color/colorAccent"
         android:hint="@string/e_mail"
-        android:backgroundTint="@color/colorAccent"
-        android:layout_marginLeft="40dp"
-        android:layout_marginRight="40dp"
+        android:inputType="textEmailAddress"
         android:padding="15dp"
         android:textAlignment="center"
-        android:textColorHint="@color/colorAccent"
         android:textColor="@color/colorAccent"
-        android:inputType="textEmailAddress"
-        android:layout_above="@id/et_password"
-        android:textSize="17sp" />
+        android:textColorHint="@color/colorAccent"
+        android:textSize="17sp"
+        app:layout_constraintBottom_toTopOf="@id/log_password"
+        app:layout_constraintStart_toStartOf="parent" />
 
     <EditText
-        android:id="@+id/et_password"
+        android:id="@+id/log_password"
         android:layout_width="match_parent"
         android:layout_height="50dp"
-        android:hint="@string/password"
-        android:textAlignment="center"
-        android:textColorHint="@color/colorAccent"
-        android:backgroundTint="@color/colorAccent"
+        android:layout_centerHorizontal="true"
+        android:layout_centerVertical="true"
         android:layout_marginLeft="40dp"
-        android:layout_marginRight="40dp"
         android:layout_marginTop="10dp"
+        android:layout_marginRight="40dp"
+        android:backgroundTint="@color/colorAccent"
         android:fontFamily="sans-serif"
-        android:padding="15dp"
+        android:hint="@string/password"
         android:inputType="textPassword"
+        android:padding="15dp"
+        android:textAlignment="center"
         android:textColor="@color/colorAccent"
-        android:layout_centerInParent="true"
-        android:textSize="17sp" />
+        android:textColorHint="@color/colorAccent"
+        android:textSize="17sp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.526" />
 
     <Button
         android:id="@+id/btn_login"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_below="@id/et_password"
+        android:layout_width="333dp"
+        android:layout_height="50dp"
+        android:layout_marginStart="40dp"
+        android:layout_marginTop="44dp"
         android:background="@drawable/loginbutton"
-        android:layout_marginLeft="40dp"
-        android:layout_marginRight="40dp"
-        android:layout_marginTop="15dp"
-        android:textSize="17sp"
         android:fontFamily="sans-serif"
+        android:text="@string/login"
         android:textColor="@color/colorAccent"
-        android:text="@string/login"/>
+        android:textSize="17sp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/log_password" />
 
     <TextView
         android:id="@+id/label_one"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/btn_login"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentEnd="true"
-        android:layout_alignParentBottom="true"
-        android:layout_marginStart="130dp"
-        android:layout_marginTop="31dp"
-        android:layout_marginEnd="129dp"
-        android:layout_marginBottom="227dp"
-        android:textAlignment="center"
+        android:layout_marginStart="129dp"
+        android:layout_marginTop="30dp"
+        android:layout_marginEnd="130dp"
         android:fontFamily="sans-serif"
-        android:textColor="@color/colorAccent"
         android:text="@string/label_one"
-        android:textSize="15sp" />
+        android:textAlignment="center"
+        android:textColor="@color/colorAccent"
+        android:textSize="15sp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/btn_login"
+        app:layout_constraintVertical_bias="0.0" />
 
     <TextView
         android:id="@+id/label_two"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/btn_login"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentEnd="true"
         android:layout_marginStart="129dp"
-        android:layout_marginTop="133dp"
+        android:layout_marginTop="30dp"
         android:layout_marginEnd="130dp"
-        android:layout_marginBottom="105dp"
         android:fontFamily="sans-serif"
         android:text="@string/label_two"
         android:textAlignment="center"
         android:textColor="@color/colorAccent"
-        android:textSize="15sp" />
+        android:textSize="15sp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/label_one" />
 
     <ImageView
         android:id="@+id/login_face"
-        android:layout_width="30dp"
-        android:layout_height="30dp"
-        android:layout_above="@id/swipeRight"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentEnd="true"
+        android:layout_width="48dp"
+        android:layout_height="40dp"
+        android:layout_above="@id/register_label"
         android:layout_marginStart="172dp"
         android:layout_marginEnd="209dp"
-        android:layout_marginBottom="29dp"
-        android:src="@drawable/facebook_100_85" />
+        android:layout_marginBottom="28dp"
+        android:src="@drawable/facebook_100_85"
+        app:layout_constraintBottom_toTopOf="@id/register_label"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="1.0"
+        app:layout_constraintStart_toStartOf="parent" />
 
+    <!--
     <com.google.android.gms.common.SignInButton
         android:id="@+id/sign_in_google_button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content" />
-
+-->
 
 
     <ImageView
         android:id="@+id/login_google"
-        android:layout_width="30dp"
-        android:layout_height="30dp"
-        android:layout_above="@id/swipeRight"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentEnd="true"
+        android:layout_width="48dp"
+        android:layout_height="40dp"
+        android:layout_above="@id/register_label"
         android:layout_marginStart="206dp"
         android:layout_marginEnd="175dp"
-        android:layout_marginBottom="29dp"
-        android:src="@drawable/google_100_85" />
+        android:layout_marginBottom="28dp"
+        android:src="@drawable/google_100_85"
+        app:layout_constraintBottom_toTopOf="@id/register_label"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="parent" />
 
     <TextView
-        android:id="@+id/swipeRight"
+        android:id="@+id/register_label"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/swipe_left_for_register"
-        android:textSize="15sp"
-        android:layout_centerHorizontal="true"
-        android:layout_alignParentBottom="true"
+        android:layout_marginStart="110dp"
+        android:layout_marginBottom="19dp"
+        android:text="@string/member_label"
         android:textColor="@color/colorAccent"
-        android:layout_marginBottom="20dp"/>
+        android:textSize="15sp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toStartOf="parent" />
 
-</RelativeLayout>
+    <TextView
+        android:id="@+id/signup_label"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="1dp"
+        android:layout_marginEnd="76dp"
+        android:layout_marginBottom="18dp"
+        android:text="@string/signup_label"
+        android:textColor="@color/colorAccent"
+        android:textSize="15sp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toEndOf="@+id/register_label" />
+
+
+</androidx.constraintlayout.widget.ConstraintLayout>
