--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -133,6 +133,21 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/label_one" />
 
+
+    <com.facebook.login.widget.LoginButton
+        android:id="@+id/btn_fb_login"
+        android:layout_width="48dp"
+        android:layout_height="40dp"
+        android:layout_above="@id/register_label"
+        android:layout_marginStart="172dp"
+        android:layout_marginEnd="209dp"
+        android:layout_marginBottom="28dp"
+        android:visibility="invisible"
+        app:layout_constraintBottom_toTopOf="@id/register_label"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="1.0"
+        app:layout_constraintStart_toStartOf="parent" />
+
     <ImageView
         android:id="@+id/login_face"
         android:layout_width="48dp"
@@ -144,7 +159,7 @@
         android:src="@drawable/facebook_100_85"
         app:layout_constraintBottom_toTopOf="@id/register_label"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="1.0"
+        app:layout_constraintHorizontal_bias="0.777"
         app:layout_constraintStart_toStartOf="parent" />
 
     <!--
@@ -153,7 +168,6 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content" />
 -->
-
 
     <ImageView
         android:id="@+id/login_google"
@@ -181,13 +195,14 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
 
+
     <TextView
         android:id="@+id/signup_label"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="1dp"
+        android:layout_marginStart="3dp"
         android:layout_marginEnd="76dp"
-        android:layout_marginBottom="18dp"
+        android:layout_marginBottom="19dp"
         android:text="@string/signup_label"
         android:textColor="@color/colorAccent"
         android:textSize="15sp"
