--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -6,4 +6,5 @@
     <color name="button_disable">#FEDBD0</color>
     <color name="button_enabled">#FBB8AC</color>
     <color name="button_color">#90303d</color>
+    <color name="transparent">#80000000</color>
 </resources>
