--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -17,7 +17,7 @@
         android:layout_marginEnd="136dp"
         android:layout_marginBottom="31dp"
         android:fontFamily="@font/varelisa"
-        android:text="@string/app_name"
+        android:text="@string/logo"
         android:textAlignment="center"
         android:textColor="@color/colorAccent"
         android:textSize="100sp"
@@ -142,7 +142,7 @@
         android:layout_marginStart="172dp"
         android:layout_marginEnd="209dp"
         android:layout_marginBottom="28dp"
-        android:visibility="invisible"
+android:visibility="invisible"
         app:layout_constraintBottom_toTopOf="@id/register_label"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="1.0"
