--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -15,7 +15,7 @@
         android:layout_height="145dp"
         android:layout_marginTop="17dp"
         android:fontFamily="@font/varelisa"
-        android:text="@string/app_name"
+        android:text="@string/logo"
         android:textAlignment="center"
         android:textColor="@color/colorAccent"
         android:textSize="100sp"
