--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -1,3 +1,13 @@
 <resources>
     <dimen name="fab_margin">16dp</dimen>
+    <dimen name="card_margin">8dp</dimen>
+    <dimen name="card_radius">8dp</dimen>
+    <dimen name="card_elevation">10dp</dimen>
+    <dimen name="linear_padding">8dp</dimen>
+    <dimen name="textview_margin">16dp</dimen>
+    <dimen name="card_text_size">18sp</dimen>
+    <dimen name="detail_backdrop_height">160dp</dimen>
+    <dimen name="text_margin">16dp</dimen>
+    <dimen name="activity_horizontal_margin">16dp</dimen>
+    <dimen name="activity_vertical_margin">16dp</dimen>
 </resources>
