--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,10 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#FBB8AC</color>
+    <color name="colorPrimary">#ee8972</color>
     <color name="colorPrimaryDark">#90303d</color>
     <color name="colorAccent">#FFF</color>
-    <color name="button_disable">#FEDBD0</color>
-    <color name="button_enabled">#FBB8AC</color>
+    <color name="button_disable">#fed39f</color>
+    <color name="button_enabled">#fe8761</color>
     <color name="button_color">#90303d</color>
-    <color name="transparent">#80000000</color>
+    <color name="colorTransparent">#00ffffff</color>
+    <color name="background">#ECF0F1</color>
+    <color name="nav_primary">#95A5A6</color>
+    <color name="nav_primary_second">#CCCCCC</color>
+    <color name="nav_clicked">#FFECE8</color>
 </resources>
