--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#ee8972</color>
+    <color name="colorPrimary">#fe8761</color>
     <color name="colorPrimaryDark">#90303d</color>
     <color name="colorAccent">#FFF</color>
     <color name="button_disable">#fed39f</color>
