--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -10,4 +10,7 @@
     <dimen name="text_margin">16dp</dimen>
     <dimen name="activity_horizontal_margin">16dp</dimen>
     <dimen name="activity_vertical_margin">16dp</dimen>
+    <dimen name="typo_headline_margin">4dp</dimen>
+    <dimen name="typo_subheading_margin">3dp</dimen>
+    <dimen name="text_size">17sp</dimen>
 </resources>
