--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -29,4 +29,47 @@
         <item name="android:textColor">@color/colorAccent</item>
         <item name="android:textSize">9sp</item>
     </style>
+
+    <style name="FormBarTheme" parent="ThemeOverlay.AppCompat.Dark"/>
+
+    <style name="ItemTitleStyle" parent="Base.TextAppearance.AppCompat.Headline">
+        <item name="android:textColor">@color/colorAccent</item>
+        <item name="android:layout_marginTop">@dimen/typo_headline_margin</item>
+        <item name="android:layout_marginBottom">@dimen/typo_headline_margin</item>
+    </style>
+    <style name="TextEditHeadlineStyle" parent="TextAppearance.AppCompat">
+        <!-- Hint color and label color in FALSE state -->
+        <!--<item name="android:textColorHint">@color/Color Name</item>-->
+        <!-- Label color in TRUE state and bar color FALSE and TRUE State -->
+        <!--<item name="colorAccent">@color/white</item>-->
+        <item name="colorControlNormal">@color/colorTransparent</item>
+        <!--<item name="colorControlActivated">@color/Color Name</item>-->
+    </style>
+
+    <style name="CalenderViewCustom" parent="Theme.AppCompat">
+        <item name="colorAccent">@color/colorPrimary</item>
+        <item name="colorPrimary">@android:color/darker_gray</item>
+        <item name="android:textColorPrimary">@color/colorPrimary</item>
+    </style>
+
+    <style name="CalenderViewDateCustomText" parent="android:TextAppearance.DeviceDefault.Small">
+        <item name="android:textColor">@color/black</item>
+    </style>
+
+    <style name="CalenderViewWeekCustomText" parent="android:TextAppearance.DeviceDefault.Small">
+        <item name="android:textColor">@android:color/darker_gray</item>
+    </style>
+
+    <style name="SCBSwitch" parent="Theme.AppCompat.Light">
+        <!-- active thumb & track color (30% transparency) -->
+        <item name="colorControlActivated">@color/colorPrimary</item>
+
+        <!-- inactive thumb color -->
+        <item name="colorSwitchThumbNormal">@color/nav_primary
+        </item>
+
+        <!-- inactive track color (30% transparency) -->
+        <item name="android:colorForeground">#42221f1f
+        </item>
+    </style>
 </resources>
