--- a/app/src/main/res/layout/fragment_progress.xml
+++ b/app/src/main/res/layout/fragment_progress.xml
@@ -2,7 +2,7 @@
 <androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/home_habit"
+    android:id="@+id/frag_progress"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/background"
@@ -49,7 +49,7 @@
                     android:layout_centerInParent="true"
                     android:gravity="center_horizontal"
                     android:orientation="vertical">
-                    
+
                     <TextView
                         android:id="@+id/hello"
                         android:layout_width="wrap_content"
