+dates, improve Calendar Page

--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -6,7 +6,7 @@
     android:id="@+id/relativeLayout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#ee8972"
+    android:background="@color/colorPrimary"
     tools:context=".login.RegisterActivity">
 
     <TextView
