Set default picture Add Habit

--- a/app/src/main/res/layout/activity_profile.xml
+++ b/app/src/main/res/layout/activity_profile.xml
@@ -8,5 +8,10 @@
     android:layout_height="match_parent"
     tools:context="com.example.halward.profilePage.ProfileActivity">
     
-<include layout="@layout/fragment_profile"/>
+<fragment
+    android:name="com.example.halward.profilePage.ProfileFragment"
+    android:id="@+id/profile_fragment"
+    android:layout_width="match_parent"
+    android:layout_weight="1"
+    android:layout_height="wrap_content"/>
 </LinearLayout>
