+added Profile info using Binding

--- a/app/src/main/res/layout/appbar.xml
+++ b/app/src/main/res/layout/appbar.xml
@@ -1,18 +1,19 @@
 <?xml version="1.0" encoding="utf-8"?>
-        <androidx.appcompat.widget.Toolbar
-            xmlns:android="http://schemas.android.com/apk/res/android"
-            android:id="@+id/add_toolbar"
-            android:layout_width="match_parent"
-            android:layout_height="?attr/actionBarSize"
-            android:background="@color/colorTransparent"
-            android:theme="@style/FormBarTheme">
+<androidx.appcompat.widget.Toolbar xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/add_toolbar"
+    android:layout_width="match_parent"
+    android:layout_height="?attr/actionBarSize"
+    android:background="@color/colorTransparent"
+    android:theme="@style/FormBarTheme"
+    tools:showIn="@layout/fragment_profile">
 
-            <ImageButton
-                android:id="@+id/back_home"
-                android:layout_width="25dp"
-                android:layout_height="25dp"
-                android:background="@drawable/back"/>
+    <ImageButton
+        android:id="@+id/back_home"
+        android:layout_width="25dp"
+        android:layout_height="25dp"
+        android:background="@drawable/back" />
 
-        </androidx.appcompat.widget.Toolbar>
+</androidx.appcompat.widget.Toolbar>
 
 
