--- a/app/src/main/res/layout/fragment_add_habit.xml
+++ b/app/src/main/res/layout/fragment_add_habit.xml
@@ -228,7 +228,14 @@
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintTop_toBottomOf="@+id/linear_on_days"
         app:layout_constraintVertical_bias="1.0">
+        <FrameLayout
+            android:id="@+id/view_progressBar"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:visibility="invisible">
 
+
+        </FrameLayout>
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
@@ -239,7 +246,7 @@
                 android:id="@+id/add_photo"
                 android:layout_width="70dp"
                 android:layout_height="70dp"
-                android:background="@drawable/add_photo" />
+                android:background="@drawable/add_picture" />
 
             <TextView
                 android:id="@+id/choose_picture"
@@ -267,24 +274,18 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/view_photo" />
 
+    <ProgressBar
+        android:id="@+id/progressBar"
+        style="?android:attr/progressBarStyle"
+        android:layout_width="120dp"
+        android:layout_height="120dp"
+        android:layout_gravity="center"
+        android:indeterminate="true"
+        android:indeterminateTint="@color/colorPrimary"
+        android:indeterminateTintMode="src_atop"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
-    <FrameLayout
-        android:id="@+id/view_progressBar"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:visibility="invisible">
-
-
-        <ProgressBar
-            android:id="@+id/progressBar"
-            style="?android:attr/progressBarStyle"
-            android:layout_width="120dp"
-            android:layout_height="120dp"
-            android:layout_gravity="center"
-            android:indeterminate="true"
-            android:indeterminateTint="@color/colorPrimary"
-            android:indeterminateTintMode="src_atop" />
-
-    </FrameLayout>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
