--- a/app/src/main/res/layout/cardview_habit_profile.xml
+++ b/app/src/main/res/layout/cardview_habit_profile.xml
@@ -14,7 +14,6 @@
     android:layout_marginEnd="@dimen/card_elevation">
 
     <androidx.constraintlayout.widget.ConstraintLayout
-        xmlns:app="http://schemas.android.com/apk/res-auto"
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
 
@@ -23,7 +22,7 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginStart="16dp"
-            android:layout_marginTop="16dp"
+            android:layout_marginTop="40dp"
             android:layout_marginEnd="16dp"
             android:text="@string/habit_name"
             android:textAppearance="@style/TextAppearance.AppCompat.Headline"
@@ -37,10 +36,11 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginStart="16dp"
-            android:layout_marginTop="8dp"
+            android:layout_marginTop="16dp"
             android:layout_marginEnd="16dp"
             android:text="@string/habit_days"
             android:textAppearance="@style/TextAppearance.AppCompat.Body1"
+            app:layout_constraintBottom_toTopOf="@+id/title_text_cv"
             app:layout_constraintEnd_toStartOf="@+id/habit_image"
             app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintStart_toStartOf="parent"
