--- a/app/src/main/res/layout/fragment_statistic.xml
+++ b/app/src/main/res/layout/fragment_statistic.xml
@@ -8,6 +8,7 @@
     android:background="@color/background"
     tools:context=".Statistic.StatisticFragment">
 
+
     <TextView
         android:id="@+id/statText"
         android:layout_width="wrap_content"
@@ -16,21 +17,11 @@
         android:text="@string/stat_text"
         android:textSize="27sp"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toStartOf="@+id/appCompatSpinner"
-        app:layout_constraintHorizontal_bias="0.309"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.498"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.051" />
-
-    <androidx.appcompat.widget.AppCompatSpinner
-        android:id="@+id/appCompatSpinner"
-        android:layout_width="57dp"
-        android:layout_height="28dp"
-        android:layout_marginEnd="44dp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.061" />
+        app:layout_constraintVertical_bias="0.101" />
 
     <androidx.cardview.widget.CardView
         android:id="@+id/daily_progress"
@@ -142,17 +133,73 @@
                     android:textSize="30sp"
                     android:textStyle="bold" />
 
-                <ProgressBar
-                    android:id="@+id/progressbar1_timerview"
-                    style="?android:attr/progressBarStyleHorizontal"
-                    android:layout_width="260dp"
-                    android:layout_height="260dp"
+            </RelativeLayout>
+
+
+        </androidx.constraintlayout.widget.ConstraintLayout>
+
+    </androidx.cardview.widget.CardView>
+
+    <androidx.cardview.widget.CardView
+        android:id="@+id/tags_progress"
+        style="@style/Widget.MaterialComponents.CardView"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="45dp"
+        android:layout_marginLeft="20dp"
+        android:layout_marginRight="20dp"
+        app:cardBackgroundColor="@color/colorAccent"
+        app:cardCornerRadius="@dimen/card_radius"
+        app:cardElevation="@dimen/card_elevation"
+        app:layout_constraintTop_toBottomOf="@+id/daily_progress"
+        tools:layout_editor_absoluteX="10dp">
+
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+
+
+            <TextView
+                android:id="@+id/tags_text"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="16dp"
+                android:layout_marginTop="16dp"
+                android:fontFamily="@font/source_sans"
+                android:text="@string/tags_progress"
+                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
+                android:textColor="@color/text_timer"
+                android:textSize="20sp"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintVertical_bias="0.0" />
+
+
+            <RelativeLayout
+                android:id="@+id/progress_tags"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintDimensionRatio="H, 12:12"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintHorizontal_bias="1.0"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent">
+
+                <com.github.mikephil.charting.charts.PieChart
+                    android:id="@+id/piechart_tags"
+                    android:layout_width="230dp"
+                    android:layout_height="150dp"
                     android:layout_centerHorizontal="true"
                     android:layout_centerVertical="true"
-                    android:layout_gravity="center_horizontal|center"
-                    android:indeterminate="false"
-                    android:progressDrawable="@drawable/circleshape1_timeview"
-                    android:visibility="gone" />
+                    android:layout_gravity="center_horizontal|bottom"
+                    android:layout_marginTop="8dp"
+                    android:layout_marginEnd="16dp"
+                    android:layout_marginBottom="8dp"
+                    android:indeterminate="false" />
+
+
 
             </RelativeLayout>
 
