--- a/app/src/main/res/layout/fragment_statistic.xml
+++ b/app/src/main/res/layout/fragment_statistic.xml
@@ -10,7 +10,7 @@
 
 
     <TextView
-        android:id="@+id/statText"
+        android:id="@+id/settingTittle"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:fontFamily="@font/source_sans"
@@ -24,7 +24,7 @@
         app:layout_constraintVertical_bias="0.101" />
 
     <androidx.cardview.widget.CardView
-        android:id="@+id/daily_progress"
+        android:id="@+id/timer_settings"
         style="@style/Widget.MaterialComponents.CardView"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -34,7 +34,7 @@
         app:cardBackgroundColor="@color/colorAccent"
         app:cardCornerRadius="@dimen/card_radius"
         app:cardElevation="@dimen/card_elevation"
-        app:layout_constraintTop_toBottomOf="@+id/statText"
+        app:layout_constraintTop_toBottomOf="@+id/settingTittle"
         tools:layout_editor_absoluteX="10dp">
 
         <androidx.constraintlayout.widget.ConstraintLayout
@@ -42,7 +42,7 @@
             android:layout_height="wrap_content">
 
             <TextView
-                android:id="@+id/daily_text"
+                android:id="@+id/timerText"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="16dp"
@@ -53,7 +53,7 @@
                 android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                 android:textColor="@color/text_timer"
                 android:textSize="20sp"
-                app:layout_constraintBottom_toTopOf="@+id/progress_horizontal"
+                app:layout_constraintBottom_toTopOf="@+id/habit_duration"
                 app:layout_constraintEnd_toStartOf="@+id/progress_daily"
                 app:layout_constraintHorizontal_bias="0.0"
                 app:layout_constraintStart_toStartOf="parent"
@@ -61,7 +61,7 @@
 
 
             <ProgressBar
-                android:id="@+id/progress_horizontal"
+                android:id="@+id/habit_duration"
                 style="?android:attr/progressBarStyleHorizontal"
                 android:layout_width="0dp"
                 android:layout_height="15dp"
@@ -76,10 +76,10 @@
                 app:layout_constraintEnd_toStartOf="@+id/progress_daily"
                 app:layout_constraintHorizontal_bias="0.0"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/daily_text" />
+                app:layout_constraintTop_toBottomOf="@+id/timerText" />
 
             <TextView
-                android:id="@+id/percent_daily"
+                android:id="@+id/minutes"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="16dp"
@@ -93,7 +93,7 @@
                 app:layout_constraintEnd_toStartOf="@+id/progress_daily"
                 app:layout_constraintHorizontal_bias="0.0"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/progress_horizontal" />
+                app:layout_constraintTop_toBottomOf="@+id/habit_duration" />
 
             <RelativeLayout
                 android:id="@+id/progress_daily"
@@ -151,7 +151,7 @@
         app:cardBackgroundColor="@color/colorAccent"
         app:cardCornerRadius="@dimen/card_radius"
         app:cardElevation="@dimen/card_elevation"
-        app:layout_constraintTop_toBottomOf="@+id/daily_progress"
+        app:layout_constraintTop_toBottomOf="@+id/timer_settings"
         tools:layout_editor_absoluteX="10dp">
 
         <androidx.constraintlayout.widget.ConstraintLayout
