--- a/app/src/main/res/layout/fragment_tab1.xml
+++ b/app/src/main/res/layout/fragment_tab1.xml
@@ -1,16 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:layout_marginLeft="@dimen/card_elevation"
     android:layout_marginRight="@dimen/card_elevation"
     android:layout_marginTop="20dp"
-    app:layout_behavior="@string/appbar_scrolling_view_behavior"
-    tools:context=".profilePage.Tab1Fragment"
-    tools:showIn="@layout/fragment_tab1">
+    tools:context=".profilePage.Tab1Fragment">
+
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/recycler_view_profile"
@@ -21,7 +18,4 @@
 
     </androidx.recyclerview.widget.RecyclerView>
 
-
-
-
-</RelativeLayout>
+</FrameLayout>
